syntax = "proto3";

package hello;

option java_multiple_files = true;
option java_package = "com.example.grpcrest.grpc";
option java_outer_classname = "HelloProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
